[metadata]
# replace with your username:
name = bk_db_tools
version = 2.1.1
author = Aaron R. Short
author_email = FuzzyFonzy@yahoo.com
description = bk_db_tools is a set of tools to very rapidly, and with a minimum of effort, work with a relational database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SunnysideAaron/bk_db_tools
project_urls =
    Wiki = https://github.com/SunnysideAaron/bk_db_tools/wiki
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    openpyxl ~= 3.0
    
[options.packages.find]
where = src